# BackroomAgent

./: .cursorrules  .env.example  .gitignore  DEVELOP.md  Makefile  PROTOCOL.md  README.md  data  docker-compose.yml  level_map.mermaid  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.cursor/: tasks.json
.githooks/: generate_commit_message.py  pre-commit  prepare-commit-msg
.github/: copilot-instructions.md  prompt-instructions.md
backend/: main.py  protocol.py
backroom_agent/: __init__.py  __main__.py  agent.py  constants.py  graph.py  protocol.py  server.py  state.py
backroom_agent/agent/: graph.py  state.py
backroom_agent/handlers/: __init__.py  init.py  item.py  message.py
data/: simple_vector_store.pkl
docs/: architecture.md  level_map.mermaid
frontend/: package-lock.json  package.json  vite-mock-plugin.ts  vite.config.ts
go_agent/: .gitignore  go.mod  go.sum  main.go
prompts/: game_context_to_script.md
scripts/: batch_fetch_levels.py  batch_run_levels.py  check_chroma.py  check_level_urls.py  clean_and_rebuild.py  clean_old_stores.py  clean_orphans.py  clear_redis.py  debug_ddg.py  generate_agent_graphs.py  generate_entity_graph.py  generate_item_graph.py  generate_level_graph.py  organize_items.py  rebuild_indices.py  rebuild_vector_store.py  run_agent.py  run_dice.py  run_event_subagent.py  run_level_agent.py  run_suggestion_subagent.py  test_agent.py  test_dice_flow.py  test_init_event.py  test_settle_node.py  test_streaming.py  test_wiki_search.py  test_wiki_tool.py
tests/: test_dice.py  test_event.py
(+630 files in other folders)
